--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,8 +19,7 @@
 
 <div class="parallax">
   <div class="parallax-item p-item-1"></div>
-  <div class="parallax-item p-item-2"></div>
-  <div class="parallax-item p-item-3"></div>
+  <div class="parallax-item p-item-2 sticky-bottom"></div>
 </div>
 
 <div class="content">
@@ -58,3 +57,4 @@
       <app-projects></app-projects>
     </div>
   </div>
+</div>
