--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -40,7 +40,7 @@
             </svg>
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" matTooltip="Whatsapp">
           <a class="nav-link"
             href="https://api.whatsapp.com/send?phone=5548985013036&text=Olá,%20gostaria%20de%20marcar%20um%20atendimento!"
             target="_blank">
