--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -35,14 +35,14 @@
           </div>
         </div>
         <mat-card-actions>
-          <app-button></app-button>
+          <app-button [hrefLink]="'https://janazdebskyi.com/'"></app-button>
         </mat-card-actions>
       </mat-card>
     </div>
 
     <div class="timeline-item">
       <div class="timeline-dot"></div>
-      <div class="timeline-date">2021</div>
+      <div class="timeline-date">03/2022</div>
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>BiShop</mat-card-title>
@@ -79,7 +79,7 @@
         </div>
         <mat-card-actions>
           <app-button
-            [hrefLink]="'https://javascript.plainenglish.io/personal-portfolio-using-angular-8-and-bootstrap-5dde6fc7cf9b'">
+            [hrefLink]="'https://github.com/bischmitt/BiShop'">
           </app-button>
         </mat-card-actions>
       </mat-card>
@@ -95,7 +95,7 @@
             for hunting.</mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div id="course-manager-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img src="../../../assets/img/course-manager/course-manager-edit.png" class="d-block w-100" alt="...">
@@ -104,14 +104,14 @@
                 <img src="../../../assets/img/course-manager/course-manager-filter.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-prev" type="button" data-bs-target="#course-manager-carousel"
               data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-next" type="button" data-bs-target="#course-manager-carousel"
               data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
@@ -125,9 +125,10 @@
         </mat-card-actions>
       </mat-card>
     </div>
+
     <div class="timeline-item">
       <div class="timeline-dot"></div>
-      <div class="timeline-date">2021</div>
+      <div class="timeline-date">01/2022</div>
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>SoulBank</mat-card-title>
@@ -138,7 +139,7 @@
           </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div id="soul-bank-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
                 <img src="../../../assets/img/bank/login.png" class="d-block w-100" alt="...">
@@ -150,14 +151,14 @@
                 <img src="../../../assets/img/bank/user.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-prev" type="button" data-bs-target="#soul-bank-carousel"
               data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-next" type="button" data-bs-target="#soul-bank-carousel"
               data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
@@ -167,13 +168,61 @@
           </div>
         </div>
         <mat-card-actions>
-          <app-button></app-button>
+          <app-button [hrefLink]="'https://github.com/bischmitt/Banco'"></app-button>
         </mat-card-actions>
       </mat-card>
     </div>
+
     <div class="timeline-item">
       <div class="timeline-dot"></div>
-      <div class="timeline-date">2021</div>
+      <div class="timeline-date">01/2022</div>
+      <mat-card class="timeline-content">
+        <mat-card-header>
+          <mat-card-title>Sistema de Funcionários</mat-card-title>
+          <mat-card-subtitle>
+            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
+            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
+            for hunting.
+          </mat-card-subtitle>
+        </mat-card-header>
+        <div mat-card-image>
+          <div id="sistema-funcionarios-carousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="2000">
+                <img src="../../../assets/img/firebase/adm.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/firebase/employee.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/firebase/login.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#sistema-funcionarios-carousel"
+              data-bs-slide="prev">
+              <span class="material-icons">
+                arrow_back_ios
+              </span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#sistema-funcionarios-carousel"
+              data-bs-slide="next">
+              <span class="material-icons">
+                arrow_forward_ios
+              </span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <mat-card-actions>
+          <app-button [hrefLink]="'https://github.com/bischmitt/Estudos/tree/master/Angular/firebase'"></app-button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-date">11/2021</div>
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>MyDoc</mat-card-title>
@@ -182,24 +231,19 @@
             for hunting.</mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div id="my-doc-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+                <img src="../../../assets/img/my-doc/home.jpeg" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-              data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#my-doc-carousel" data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-              data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#my-doc-carousel" data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
               </span>
@@ -208,13 +252,14 @@
           </div>
         </div>
         <mat-card-actions>
-          <app-button></app-button>
+          <app-button [hrefLink]="'https://github.com/bischmitt/hospital'"></app-button>
         </mat-card-actions>
       </mat-card>
     </div>
+
     <div class="timeline-item">
       <div class="timeline-dot"></div>
-      <div class="timeline-date">2021</div>
+      <div class="timeline-date">10/2021</div>
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>OpenBook</mat-card-title>
@@ -223,23 +268,26 @@
             for hunting.</mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div id="open-book-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+                <img src="../../../assets/img/open-book/home.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+                <img src="../../../assets/img/open-book/favorites.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/open-book/books.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-prev" type="button" data-bs-target="#open-book-carousel"
               data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-next" type="button" data-bs-target="#open-book-carousel"
               data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
@@ -249,13 +297,14 @@
           </div>
         </div>
         <mat-card-actions>
-          <app-button></app-button>
+          <app-button [hrefLink]="'https://openbook-g5.github.io/openBook/'"></app-button>
         </mat-card-actions>
       </mat-card>
     </div>
+
     <div class="timeline-item">
       <div class="timeline-dot"></div>
-      <div class="timeline-date">2021</div>
+      <div class="timeline-date">10/2021</div>
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>Produtos da Terra</mat-card-title>
@@ -264,23 +313,26 @@
             for hunting.</mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
-          <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+          <div id="produtos-da-terra-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-1.png" class="d-block w-100" alt="...">
+                <img src="../../../assets/img/produtos-da-terra/modal.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../assets/img/jana-zdebskyi/jana-2.png" class="d-block w-100" alt="...">
+                <img src="../../../assets/img/produtos-da-terra/form.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="../../../assets/img/produtos-da-terra/landing-page.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-prev" type="button" data-bs-target="#produtos-da-terra-carousel"
               data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            <button class="carousel-control-next" type="button" data-bs-target="#produtos-da-terra-carousel"
               data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
@@ -290,7 +342,7 @@
           </div>
         </div>
         <mat-card-actions>
-          <app-button></app-button>
+          <app-button [hrefLink]="'https://bischmitt.github.io/ProdutosDaTerra/'"></app-button>
         </mat-card-actions>
       </mat-card>
     </div>
