card text / clipboard email / snackbar ok

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,28 +1,9 @@
-<!-- <div class="container-1">
-    <mat-card class="card-container-1 mat-elevation-z10">
-      <mat-card-title>Bianca Klein Schmitt</mat-card-title>
-      <mat-card-subtitle>Desenvolvedora Web Full Stack</mat-card-subtitle>
-    </mat-card>
-</div>
-
-<div class="container-2">
-  <section>
-
-  </section>
-</div>
-
-<div>
-  <section>
-
-  </section>
-</div> -->
-
-<div class="parallax">
+<div class="parallax" id="top">
   <div class="parallax-item p-item-1"></div>
   <div class="parallax-item p-item-2 sticky-bottom"></div>
 </div>
 
-<div class="content">
+<div class="content" #target>
   <div class="content-header">
     <h1>Bianca Klein Schmitt</h1>
     <h2>Full Stack Web Developer</h2>
