--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -6,10 +6,13 @@
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>Jana Zdebskyi Psicóloga</mat-card-title>
-          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.</mat-card-subtitle>
+          <mat-card-subtitle>Esta solução foi desenvolvida para uma cliente que buscava por um site com domínio próprio
+            que informasse o tipo de antendimento que ela oferece, além de integrar em uma mesma página todos os seus
+            meios de contato.
+            <p><strong>Tecnologias utilizadas:</strong> Figma, HTML5, CSS3, Bootstrap e JavaScript.</p>
+          </mat-card-subtitle>
         </mat-card-header>
+
         <div mat-card-image>
           <div id="jana-carousel" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -46,9 +49,11 @@
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>BiShop</mat-card-title>
-          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.</mat-card-subtitle>
+          <mat-card-subtitle>Sistema de controle de funcionários com CRUD completo para cargo, funcionário, supervisor e
+            bonificação. É possível trocar funcionários de cargo, bem como alterar o supervisor de um cargo por meio do
+            entrelaçamento de informações, com vínculos cargo-funcionário, cargo-supervisor, funcionário-bonificação.
+            <p><strong>Tecnologias utilizadas:</strong> Figma, Angular, Angular Material, Bootstrap, MySQL e Java</p>
+          </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
           <div id="bi-shop-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -78,8 +83,7 @@
           </div>
         </div>
         <mat-card-actions>
-          <app-button
-            [hrefLink]="'https://github.com/bischmitt/BiShop'">
+          <app-button [hrefLink]="'https://github.com/bischmitt/BiShop'">
           </app-button>
         </mat-card-actions>
       </mat-card>
@@ -90,9 +94,11 @@
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>Course-Manager</mat-card-title>
-          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.</mat-card-subtitle>
+          <mat-card-subtitle>Sistema de gerenciamento de cursos Angular no qual é possível editar e deletar os
+            elementos, além de filtrá-los. Os dados são trazidos de uma lista estática por um servidor nodeJS.
+            for hunting.
+            <p><strong>Tecnologias utilizadas:</strong>Angular, Angular Material, Bootstrap e NodeJs.</p>
+          </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
           <div id="course-manager-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -133,9 +139,9 @@
         <mat-card-header>
           <mat-card-title>SoulBank</mat-card-title>
           <mat-card-subtitle>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.
+            Desenvolvimento de um banco virtual em que forneça aos clientes, maiores de 18 anos, os serviços de abertura
+            de conta, transferência bancária, consulta de saldo e pagamentos.
+            <p><strong>Tecnologias utilizadas:</strong>Angular, Bootstrap e Firebase.</p>
           </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
@@ -180,9 +186,8 @@
         <mat-card-header>
           <mat-card-title>Sistema de Funcionários</mat-card-title>
           <mat-card-subtitle>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.
+            Aplicação que permite listar, criar, editar e deletar funcionários.
+            <p><strong>Tecnologias utilizadas:</strong>Angular, Bootstrap e Firebase.</p>
           </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
@@ -226,9 +231,12 @@
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>MyDoc</mat-card-title>
-          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.</mat-card-subtitle>
+          <mat-card-subtitle>
+            Aplicação com login para administrador e usuário comum. O administrador pode adicionar, listar, editar e
+            excluir um médico e/ou especialidade do sistema, enquanto que ao usuário comum é apenas possível visualizar
+            as especialidades oferecidas e os médicos disponíves.
+            <p><strong>Tecnologias utilizadas:</strong> Figma, HTML5, CSS3, Bootstrap, HandleBars, MongoDB e NodeJs.</p>
+          </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
           <div id="my-doc-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -263,9 +271,11 @@
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>OpenBook</mat-card-title>
-          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.</mat-card-subtitle>
+          <mat-card-subtitle>
+            Aplicação desenvolvida para pessoas realizarem o download de livros disponíveis no site gratuitamente. O
+            usuário também pode registrar livros que tenha interesse, mas que ainda não estão disponíveis.
+            <p><strong>Tecnologias utilizadas:</strong> HTML5, CSS3, JQuery, Bootstrap e JavaScript.</p>
+          </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
           <div id="open-book-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -310,7 +320,9 @@
           <mat-card-title>Produtos da Terra</mat-card-title>
           <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
             Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.</mat-card-subtitle>
+            for hunting.
+            <p><strong>Tecnologias utilizadas:</strong> HTML5, CSS3 e JavaScript.</p>
+          </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
           <div id="produtos-da-terra-carousel" class="carousel slide" data-bs-ride="carousel">
