--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,10 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
 }
+
+.pink-snackbar {
+  background-color: #ff006a;
+  color: #ffefea;
+  font-weight: 500;
+  text-align: center;
+}
