--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -318,10 +318,10 @@
       <mat-card class="timeline-content">
         <mat-card-header>
           <mat-card-title>Produtos da Terra</mat-card-title>
-          <mat-card-subtitle>The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from
-            Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred
-            for hunting.
-            <p><strong>Tecnologias utilizadas:</strong> HTML5, CSS3 e JavaScript.</p>
+          <mat-card-subtitle>Site desenvolvido para uma família de agricultores com o objetivo de vender os alimentos
+            produzidos em sua terra.
+            <p><strong>Tecnologias utilizadas:</strong> HTML5, CSS3 e JavaScript. Obs.: Atualmente estou desenvolvendo a
+              mesma ideia em Angular, Java e MySQL</p>
           </mat-card-subtitle>
         </mat-card-header>
         <div mat-card-image>
