--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -59,7 +59,7 @@
 }
 
 .timeline-content {
-  background: linear-gradient(180deg, rgba(7, 30, 71, 0.9) 0%, rgba(7, 30, 71, 0.6) 35%, rgba(7, 30, 71, 0.2) 80%);
+  // background: linear-gradient(180deg, rgba(7, 30, 71, 0.9) 0%, rgba(7, 30, 71, 0.6) 35%, rgba(7, 30, 71, 0.2) 80%);
   background: linear-gradient(180deg, rgba(23, 74, 104, 0.9) 0%, rgba(23, 74, 104, 0.6) 35%, rgba(23, 74, 104, 0.2) 80%);
   padding: 30px;
   font-family: 'poppins';
