--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item" [cdkCopyToClipboard]="value" matTooltip="Clique para copiar meu email" (click)="openSnackBar()">
+        <li class="nav-item" [cdkCopyToClipboard]="value" matTooltip="Clique para copiar meu email" matTooltipClass="matTooltip" (click)="openSnackBar()">
           <a class="nav-link active" aria-current="page" >
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#ffffff" class="bi bi-envelope"
               viewBox="0 0 16 16">
