--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "@angular/material/theming";
+@import url("assets/config_scss/_variables.scss");
 @include mat-core();
 
 $color-primary: mat-palette($mat-pink, A700, 200);
@@ -24,8 +25,14 @@ body {
 }
 
 .pink-snackbar {
-  background-color: #ff006a;
+  background-color: #c51162;
   color: #ffefea;
   font-weight: 500;
   text-align: center;
+}
+
+.matTooltip{
+  background: #c51162;
+  padding: 0.5rem;
+  font-size: 12px;
 }
