--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,7 @@
             </svg>
           </a>
         </li>
-        <li class="nav-item" matTooltip="Download do meu currículo :)">
+        <li class="nav-item" matTooltip="Download do meu currículo :)" matTooltipClass="matTooltip">
           <a class="nav-link active" aria-current="page" href="../../../assets/files/bianca-schmitt-curriculo.pdf"
             download>
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff"
@@ -27,7 +27,7 @@
             </svg>
           </a>
         </li>
-        <li class="nav-item" matTooltip="Linkedin">
+        <li class="nav-item" matTooltip="Linkedin" matTooltipClass="matTooltip">
           <a class="nav-link" href="https://www.linkedin.com/in/bischmitt98/" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff" class="bi bi-linkedin"
               viewBox="0 0 16 16">
@@ -36,7 +36,7 @@
             </svg>
           </a>
         </li>
-        <li class="nav-item" matTooltip="Github">
+        <li class="nav-item" matTooltip="Github" matTooltipClass="matTooltip">
           <a class="nav-link" href="https://github.com/bischmitt" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ffffff" class="bi bi-github"
               viewBox="0 0 16 16">
@@ -45,7 +45,7 @@
             </svg>
           </a>
         </li>
-        <li class="nav-item" matTooltip="Whatsapp">
+        <li class="nav-item" matTooltip="Whatsapp" matTooltipClass="matTooltip">
           <a class="nav-link"
             href="https://api.whatsapp.com/send?phone=5548985013036&text=Olá,%20gostaria%20de%20marcar%20um%20atendimento!"
             target="_blank">
@@ -60,4 +60,5 @@
     </div>
   </div>
 </nav>
+
 
