--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -290,14 +290,14 @@
                 <img src="../../../assets/img/open-book/books.png" class="d-block w-100" alt="...">
               </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#open-book-carousel"
+            <button class="carousel-control-prev" data-bs-target="#open-book-carousel"
               data-bs-slide="prev">
               <span class="material-icons">
                 arrow_back_ios
               </span>
               <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#open-book-carousel"
+            <button class="carousel-control-next" data-bs-target="#open-book-carousel"
               data-bs-slide="next">
               <span class="material-icons">
                 arrow_forward_ios
